refactor: fix sonar